--- a/MulLe/Base.lproj/Main.storyboard
+++ b/MulLe/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gpr-Vd-jtY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -365,18 +365,19 @@
         <!--Onboarding View Controller-->
         <scene sceneID="AUv-BI-WGN">
             <objects>
-                <viewController id="gpr-Vd-jtY" customClass="OnboardingViewController" customModule="MulLe" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Onboarding" id="gpr-Vd-jtY" customClass="OnboardingViewController" customModule="MulLe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hUA-hr-7SH">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LW4-eM-osx">
-                                <rect key="frame" x="128" y="726" width="158" height="36"/>
+                                <rect key="frame" x="129" y="726" width="156" height="36"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                <state key="normal" title="Skip and get Started">
+                                <state key="normal" title="Skip and get started">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
+                                    <action selector="gotStarted:" destination="gpr-Vd-jtY" eventType="touchUpInside" id="wI5-Fe-8m2"/>
                                     <segue destination="Kfk-Ju-Y1o" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="nt6-HO-fsz"/>
                                 </connections>
                             </button>
@@ -399,7 +400,7 @@
         <!--Navigation Controller-->
         <scene sceneID="tYq-KN-ziP">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Kfk-Ju-Y1o" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="Mainapp" automaticallyAdjustsScrollViewInsets="NO" id="Kfk-Ju-Y1o" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="OYg-P8-og5"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Zu3-Sk-pYJ">
